1999-08-03  William A. Perkins  <wa_perkins@pnl.gov>

	* mass2_main_025.f90: most output to "output.out" is now only made
	  if the debug flag is set -- exceptions are the initial
	  simulation information and mass source information

	* makefile.dec (mass2_main_025.o): as with makefile
	(plot_output.$(MOD)): depends on plot_output.o not print_output.o 

	* makefile (mass2_main_025.o): was still mass2_main_024.o --
		  changed to 025.

1999-08-02  William A. Perkins  <wa_perkins@pnl.gov>

	* table_bc_module.f90(read_bc_tables): skip first line of BC files 
	  (read_scalar_bc_tables): skip first line of BC files 

1999-07-28  William A. Perkins  <wa_perkins@pnl.gov>

	* table_bc_module.f90: had to increase the size of table_entry
	  again to 40000 and reduce max_cell_values to 10 (was 1000 by
	  mistake) 

1999-07-27  William A. Perkins  <wa_perkins@pnl.gov>

	* table_bc_module.f90: increased the size of table_entry in
	  table_bc_struct to 10000

1999-05-26  William A. Perkins  <wa_perkins@pnl.gov>

	* mass2_v025.mak: regenerated

	* mass2_v025.dsp:  added plot_output module -- seems to work

	* makefile.dec (plot_output.o): added

	* makefile (MODULES): added PLOT_OUTPUT to module list

1999-05-21  William A. Perkins  <wa_perkins@pnl.gov>

	* mass2_main_025.f90: moved all of the diagnostic_plot.dat output to
	  plot_output.f90

	* plot_output.f90: moved all of the diagnostic_plot.dat output from
	  mass2_main_025.f90

	* mass2_main_025.f90: moved all of the plot.dat output to
	  plot_output.f90  

	* plot_output.f90: created, encapsulates plot file output.

1999-05-11  William A. Perkins  <wa_perkins@pnl.gov>

	* mass2_main_025.f90: The output to mass_source_iounit had lines
	  too long, the output was spread over multiple lines

1999-04-08  William A. Perkins  <wa_perkins@pnl.gov>

	* makefile (DEBUG): removed -g3 and added -Ofast, as per
	  Marshall's tests

	* makefile.dec: Lower cased all module names
	(FLAGS): used -fpe1, but this may not be the right choice 